<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/large_len"
        android:layout_height="@dimen/large_len"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/purple_200"
        android:text="@string/greeting1"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/large_len"
        android:layout_height="@dimen/large_len"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/purple"
        android:text="@string/greeting2"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/large_len"
        android:layout_height="@dimen/large_len"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/purple_500"
        android:text="@string/greeting3"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/large_len"
        android:layout_height="@dimen/large_len"
        android:backgroundTint="@color/purple_700"
        android:text="@string/greeting4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_label_1"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>