<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_len"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/lime"
        android:text="@string/greeting5"
        android:gravity="center"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="@dimen/small_len"
        android:backgroundTint="@color/teal_700"
        android:text="@string/like_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        android:layout_marginTop="@dimen/margin_top"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/med_len"
        android:layout_height="@dimen/med_len"
        android:backgroundTint="@color/purple"
        android:text="@string/layout_label_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/med_len"
        android:layout_height="@dimen/med_len"
        android:backgroundTint="@color/purple_500"
        android:text="@string/accomplishment_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>